<resources>
    <string name="app_name" translatable="false">Mobile ship battle</string>
    <string name="change_language">Change Language</string>
    <string name="english">English</string>
    <string name="croatian">Croatian</string>
    <string name="start_game">Start game</string>
    <string name="how_to_play">How to play</string>
    <string name="settings">Settings</string>
    <string name="exit">Exit</string>
    <string name="text">Place your ships on the grid. Take turns firing at your opponents grid. A hit will be marked, and you keep firing. Sink all enemy ships to win!</string>
    <string name="back">Back to menu</string>
    <string name="howplay">How to play</string>

    //u settings
    <string name="music">Enable music</string>

    //u home activity
    <string name="play_offline">Play Offline</string>
    <string name="create_game_online">Create Game Online</string>
    <string name="join_game_online">Join Game Online</string>
    <string name="enter_game_id">Enter game ID</string>
    <string name="or">or</string>

    //u game activity
    <string name="gamenostart">Game not started</string>
    <string name="resetfleet">Reset fleet</string>
    <string name="shareButton">Share ID</string>


</resources>